# first-machine-learning

./: CMakeLists.txt  main.cpp
entities/HiddenNeuron/: HiddenNeuron.cpp  HiddenNeuron.h
entities/InputNeuron/: InputNeuron.cpp  InputNeuron.h
entities/Neuron/: Neuron.cpp  Neuron.h
